--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         </div>
         <div id="container">
             <div class="left-container"></div>
-            <div class="game-container"></div>
+            <div class="game-container">
+                <iframe src="http://localhost:8000" width="100%" height="100%" frameborder="0"></iframe>
+            </div>
             <div class="right-container"></div>
         </div>
 
@@ -27,4 +29,11 @@
             <h3>Crée par Majid KNANOUA (envraicplusnathan)</h3>
         </footer>
     </body>
+    <script>
+
+
+
+
+
+    </script>
 </html>
