--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="container">
             <div class="left-container"></div>
             <div class="game-container">
-                <iframe src="http://localhost:8000" width="100%" height="100%" frameborder="0"></iframe>
+                <iframe src="https://maajiid.github.io/quick/" width="100%" height="100%" frameborder="0"></iframe>
             </div>
             <div class="right-container"></div>
         </div>
